--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,6 @@
 <div class="contents row">
-  <p><%= @nickname %>さんの投稿一覧</p>
+  <p><%= @nickname %>キャンプサイト情報</p>
   <% @tweets.each do |tweet| %>
-    <div class="content_post" ">
-      <p><%= tweet.text %></p>
-      <span class="name"><%= tweet.title %></span>
-    </div>
+    <%= render partial: "tweets/tweet", locals: { tweet: tweet } %>
   <% end %>
 </div>
