--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -20,7 +20,7 @@ section,
 summary {
   display: block;
 }
-
+/*特に変化なし*/
 /*
  * Correct `inline-block` display not defined in IE 8/9. */
 audio,
@@ -28,14 +28,14 @@ canvas,
 video {
   display: inline-block;
 }
-
+/*特に変化なし*/
 /*
  * Prevent modern browsers from displaying `audio` without controls.
  * Remove excess height in iOS 5 devices. */
 audio:not([controls]) {
   display: none;
-  height: 0;
-}
+  height: 100px;
+}/*特に変化なし*/
 
 /*
  * Address `[hidden]` styling not present in IE 8/9.
@@ -43,7 +43,7 @@ audio:not([controls]) {
 [hidden],
 template {
   display: none;
-}
+}/*変化あり*/
 
 /* ==========================================================================
  * Base
@@ -59,35 +59,26 @@ html {
   /* 2 */
   -webkit-text-size-adjust: 100%;
   /* 2 */
-}
+}/*変化なし*/
 
 /*
  * Remove default margin. */
-body {
-  margin: 0;
-}
+
 
 /* ==========================================================================
  * Links
  * ========================================================================== */
 /*
  * Remove the gray background color from active links in IE 10. */
-a {
-  background: transparent;
-}
+
 
 /*
  * Address `outline` inconsistency between Chrome and other browsers. */
-a:focus {
-  outline: thin dotted;
-}
+
 
 /*
  * Improve readability when focused and also mouse hovered in all browsers. */
-a:active,
-a:hover {
-  outline: 0;
-}
+
 
 /* ==========================================================================
  * Typography
@@ -95,169 +86,88 @@ a:hover {
 /*
  * Address variable `h1` font-size and margin within `section` and `article`
  * contexts in Firefox 4+, Safari 5, and Chrome. */
-h1 {
-  font-size: 2em;
-  margin: 0.67em 0;
-}
+
 
 /*
  * Address styling not present in IE 8/9, Safari 5, and Chrome. */
-abbr[title] {
-  border-bottom: 1px dotted;
-}
 
-/*
- * Address style set to `bolder` in Firefox 4+, Safari 5, and Chrome. */
-b,
-strong {
-  font-weight: bold;
-}
-
-/*
- * Address styling not present in Safari 5 and Chrome. */
-dfn {
-  font-style: italic;
-}
 
 /*
  * Address differences between Firefox and other browsers. */
-hr {
-  -moz-box-sizing: content-box;
-  box-sizing: content-box;
-  height: 0;
-}
 
-/*
- * Address styling not present in IE 8/9. */
-mark {
-  background: yellow;
-  color: black;
-}
 
 /*
  * Correct font family set oddly in Safari 5 and Chrome. */
-code,
-kbd,
-pre,
-samp {
-  font-family: monospace, serif;
-  font-size: 1em;
-}
+
+/*変化なし*/
 
 /*
  * Improve readability of pre-formatted text in all browsers. */
-pre {
-  white-space: pre-wrap;
-}
+
 
 /*
  * Set consistent quote types. */
-q {
-  quotes: "“""”""‘""’";
-}
+
 
 /*
  * Address inconsistent and variable font size in all browsers. */
-small {
-  font-size: 80%;
-}
+
 
 /*
  * Prevent `sub` and `sup` affecting `line-height` in all browsers. */
-sub,
-sup {
-  font-size: 75%;
-  line-height: 0;
-  position: relative;
-  vertical-align: baseline;
-}
-
-sup {
-  top: -0.5em;
-}
-
-sub {
-  bottom: -0.25em;
-}
 
 /* ==========================================================================
  * Embedded content
  * ========================================================================== */
 /*
  * Remove border when inside `a` element in IE 8/9. */
-img {
-  border: 0;
-}
 
-/*
- * Correct overflow displayed oddly in IE 9. */
-svg:not(:root) {
-  overflow: hidden;
-}
 
 /* ==========================================================================
  * Figures
  * ========================================================================== */
 /*
  * Address margin not present in IE 8/9 and Safari 5. */
-figure {
-  margin: 0;
-}
+
 
 /* ==========================================================================
  * Forms
  * ========================================================================== */
 /*
  * Define consistent border, margin, and padding. */
-fieldset {
-  border: 1px solid silver;
-  margin: 0 2px;
-  padding: 0.35em 0.625em 0.75em;
-}
 
 /*
  * 1. Correct `color` not being inherited in IE 8/9.
  * 2. Remove padding so people aren't caught out if they zero out fieldsets. */
-legend {
-  border: 0;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
+
 
 /*
  * 1. Correct font family not being inherited in all browsers.
  * 2. Correct font size not being inherited in all browsers.
  * 3. Address margins set differently in Firefox 4+, Safari 5, and Chrome. */
-button,
-input,
-select,
-textarea {
-  font-family: inherit;
-  /* 1 */
-  font-size: 100%;
-  /* 2 */
-  margin: 0;
-  /* 3 */
-}
+ button,
+ input,
+ select,
+ textarea {
+   font-family: inherit;
+   /* 1 */
+   font-size: 100%;
+   /* 2 */
+   margin: 0;
+   /* 3 */
+ }/*変化あり検索の文字か小さくなった*/
 
 /*
  * Address Firefox 4+ setting `line-height` on `input` using `!important` in
  * the UA stylesheet. */
-button,
-input {
-  line-height: normal;
-}
+
 
 /*
  * Address inconsistent `text-transform` inheritance for `button` and `select`.
  * All other form control elements do not inherit `text-transform` values.
  * Correct `button` style inheritance in Chrome, Safari 5+, and IE 8+.
  * Correct `select` style inheritance in Firefox 4+ and Opera. */
-button,
-select {
-  text-transform: none;
-}
+
 
 /*
  * 1. Avoid the WebKit bug in Android 4.0.* where (2) destroys native `audio`
@@ -265,62 +175,27 @@ select {
  * 2. Correct inability to style clickable `input` types in iOS.
  * 3. Improve usability and consistency of cursor style between image-type
  *    `input` and others. */
-button,
-html input[type="button"],
-input[type="reset"],
-input[type="submit"] {
-  -webkit-appearance: button;
-  /* 2 */
-  cursor: pointer;
-  /* 3 */
-}
+
 
 /*
  * Re-set default cursor for disabled elements. */
-button[disabled],
-html input[disabled] {
-  cursor: default;
-}
 
-/*
- * 1. Address box sizing set to `content-box` in IE 8/9/10.
- * 2. Remove excess padding in IE 8/9/10. */
-input[type="checkbox"],
-input[type="radio"] {
-  box-sizing: border-box;
-  /* 1 */
-  padding: 0;
-  /* 2 */
-}
+ 
 
 /*
  * 1. Address `appearance` set to `searchfield` in Safari 5 and Chrome.
  * 2. Address `box-sizing` set to `border-box` in Safari 5 and Chrome
  *    (include `-moz` to future-proof). */
-input[type="search"] {
-  -webkit-appearance: textfield;
-  /* 1 */
-  -moz-box-sizing: content-box;
-  -webkit-box-sizing: content-box;
-  /* 2 */
-  box-sizing: content-box;
-}
+
 
 /*
  * Remove inner padding and search cancel button in Safari 5 and Chrome
  * on OS X. */
-input[type="search"]::-webkit-search-cancel-button,
-input[type="search"]::-webkit-search-decoration {
-  -webkit-appearance: none;
-}
+
 
 /*
  * Remove inner padding and border in Firefox 4+. */
-button::-moz-focus-inner,
-input::-moz-focus-inner {
-  border: 0;
-  padding: 0;
-}
+
 
 /*
  * 1. Remove default vertical scrollbar in IE 8/9.
@@ -330,17 +205,14 @@ textarea {
   /* 1 */
   vertical-align: top;
   /* 2 */
-}
+}/*変化ありコメントの枠が変動した*/
 
 /* ==========================================================================
  * Tables
  * ========================================================================== */
 /*
  * Remove most spacing between table cells. */
-table {
-  border-collapse: collapse;
-  border-spacing: 0;
-}
+
 
 /* ==========================================================================
  * CSS SETTING
@@ -353,82 +225,19 @@ table {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
-}
+}/*トップページ上記(検索との間)が狭くなる*/
 
 img,
 object,
 embed {
   max-width: 100%;
   height: auto;
-}
+}/*画像が大きくなる*/
 
-object,
-embed {
-  height: 100%;
-}
 
-.left {
-  float: left;
-}
 
-.right {
-  float: right;
-}
 
-.clearfix {
-  *zoom: 1;
-}
 
-.clearfix:after {
-  content: "\0020";
-  display: block;
-  height: 0;
-  clear: both;
-  overflow: hidden;
-  visibility: hidden;
-}
-
-.text-left {
-  text-align: left;
-}
-
-.text-right {
-  text-align: right;
-}
-
-.text-center {
-  text-align: center;
-}
-
-.text-justify {
-  text-align: justify;
-}
-
-.hide {
-  display: none;
-}
-
-.antialiased {
-  -webkit-font-smoothing: antialiased;
-}
-
-img {
-  display: inline-block;
-  vertical-align: middle;
-}
-
-textarea {
-  height: auto;
-  min-height: 50px;
-}
-
-select {
-  width: 100%;
-}
-
-i {
-  font-style: normal;
-}
 
 .animate {
   -moz-transition-property: all;
@@ -443,24 +252,25 @@ i {
   -o-transition-timing-function: ease-in;
   -webkit-transition-timing-function: ease-in;
   transition-timing-function: ease-in;
-}
+}/*変化なし*/
 
 .button {
   background-image: -moz-linear-gradient(top, rgba(255, 255, 255, 0.05) 1%, rgba(0, 0, 0, 0.2) 100%);
   background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, 0.05) 1%, rgba(0, 0, 0, 0.2) 100%);
   background-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.05) 1%, rgba(0, 0, 0, 0.2) 100%);
-}
+}/*変化なし*/
 
 ul {
+  display: flex;
   margin: 0;
   padding: 0;
-}
+}/*親編集削除詳細が移動した*/
 
 ul li {
   list-style: none;
-  padding: 0;
+  padding:0 10px 0 0;
   margin: 0;
-}
+}/*子編集削除詳細が移動した*/
 
 .row {
   width: 100%;
@@ -470,158 +280,14 @@ ul li {
   margin-bottom: 0;
   max-width: 660px;
   *zoom: 1;
-}
+}/*トップページ画像が移動した*/
 
-.row .grid-1,
-.row .grid-2,
-.row .grid-3,
-.row .grid-4,
-.row .grid-5,
-.row .grid-6,
-.row .grid-7,
-.row .grid-8,
-.row .grid-9,
-.row .grid-10,
-.row .grid-11,
-.row .grid-12 {
-  float: left;
-  margin-left: 0.9%;
-  margin-right: 0.9%;
-}
 
-.row .grid-1 {
-  width: 6.53333%;
-}
 
-.row .grid-2 {
-  width: 14.86667%;
-}
 
-.row .grid-3 {
-  width: 23.2%;
-}
 
-.row .grid-4 {
-  width: 31.53333%;
-}
 
-.row .grid-5 {
-  width: 39.86667%;
-}
 
-.row .grid-6 {
-  width: 48.2%;
-}
-
-.row .grid-7 {
-  width: 56.53333%;
-}
-
-.row .grid-8 {
-  width: 64.86667%;
-}
-
-.row .grid-9 {
-  width: 73.2%;
-}
-
-.row .grid-10 {
-  width: 81.53333%;
-}
-
-.row .grid-11 {
-  width: 89.86667%;
-}
-
-.row .grid-12 {
-  width: 98.2%;
-}
-
-.row:before,
-.row:after {
-  content: " ";
-  display: table;
-}
-
-.row:after {
-  clear: both;
-}
-
-.row.collapse>.column,
-.row.collapse>.columns {
-  position: relative;
-  padding-left: 0;
-  padding-right: 0;
-  float: left;
-}
-
-.row.collapse .row {
-  margin-left: 0;
-  margin-right: 0;
-}
-
-.row .row {
-  width: auto;
-  margin-left: -0.9375em;
-  margin-right: -0.9375em;
-  margin-top: 0;
-  margin-bottom: 0;
-  max-width: none;
-  *zoom: 1;
-}
-
-.row .row:before,
-.row .row:after {
-  content: " ";
-  display: table;
-}
-
-.row .row:after {
-  clear: both;
-}
-
-.row .row.collapse {
-  width: auto;
-  margin: 0;
-  max-width: none;
-  *zoom: 1;
-}
-
-.row .row.collapse:before,
-.row .row.collapse:after {
-  content: " ";
-  display: table;
-}
-
-.row .row.collapse:after {
-  clear: both;
-}
-
-@media only screen and (max-width: 40em) {
-
-  .row {
-    width: 100%;
-    padding: 0 20px !important;
-  }
-
-  .row .grid-1,
-  .row .grid-2,
-  .row .grid-3,
-  .row .grid-4,
-  .row .grid-5,
-  .row .grid-6,
-  .row .grid-7,
-  .row .grid-8,
-  .row .grid-9,
-  .row .grid-10,
-  .row .grid-11,
-  .row .grid-12 {
-    float: none;
-    width: 100% !important;
-    margin: 0 !important;
-    position: static !important;
-  }
-}
 
 /* max-width 640px, mobile-only styles, use when QAing mobile issues */
 @media only screen and (min-width: 40.063em) and (max-width: 64em) {
@@ -632,18 +298,18 @@ ul li {
   .row .grid-4 {
     width: 48.2% !important;
   }
-}
+}/*変化なし*/
 
 /* min-width 641px and max-width 1024px, use when QAing tablet-only issues */
 body,
 html {
   height: 100%;
   background-color: #f5f5f3;
-}
+}/*変化あり*/
 
 body {
-  padding-top: 60px;
-}
+  padding-top: 100px;
+}/*変化あり*/
 
 h1,
 h2,
@@ -658,33 +324,24 @@ body {
   color: #666;
   font-family: 'Unica One', "Avenir", "游ゴシック", "YuGothic", "ヒラギノ角ゴ Pro W6", "HIragino Kaku Gothic Pro W6", "HIragino Kaku Gothic Pro", Osaka, Meiryo, "メイリオ", "ＭＳ Ｐゴシック", "MS P Gothic", sans-serif;
   margin: 0;
-}
+}/*変化ありトップページ上部文字*/
 
 a {
   text-decoration: none;
   color:#a0522d;
-}
+}/*変化ありトップページ上部文字色*/
 
 a:hover {
-  color: #57C3E9;
-}
+  color: #aaa;
+}  /* 矢印を置くと色変 */
 
-.bold {
-  font-weight: bold;
-}
+
 
 .serif,
 div.contents.row div.content_post p {
   font-family: 'ほのか明朝', serif;
-}
+}   /* 全体に使用されている */
 
-.ultra {
-  font-size: 2em !important;
-}
-
-::selection {
-  background: #D8D8D8;
-}
 
 .transition,
 a,
@@ -701,7 +358,7 @@ form input[type="submit"] {
   -o-transition-timing-function: linear;
   -webkit-transition-timing-function: linear;
   transition-timing-function: linear;
-}
+} /* ボタンクリックを持ってくると色変 */
 
 .btn,
 header.header div.header__bar.row div.grid-6 a.post {
@@ -712,31 +369,19 @@ header.header div.header__bar.row div.grid-6 a.post {
   font-weight: bold;
   text-align: center;
   border-radius: 3px;
-  display: inline-block;
-}
+  display: inline-block; 
+}/* ボタン */
 
 .btn:hover,
 header.header div.header__bar.row div.grid-6 a.post:hover {
-  border-color: #9bdbf2;
-  color: #9bdbf2;
-}
+  border-color: #aaa;
+  color: #aaa;;
+} /* 編集一覧に戻るなどに使用されている */
 
-.title {
-  font-weight: bold;
-}
 
-.title--big {
-  font-size: 1.5em;
-  font-weight: bold;
-}
-
-.title--big i {
-  font-style: italic;
-  font-size: 1.8em;
-}
 
 header.header {
-  padding: 10px;
+  padding:30px;
   border-bottom: 1px solid #D8D8D8;
   background-color: #fff;
   position: fixed;
@@ -744,39 +389,40 @@ header.header {
   left: 0;
   right: 0;
   z-index: 5;
-  height: 62px;
-}
+  height: 100px;
+}/* トップページ最上部高さ色変更出来る*/
 
 header.header div.header__bar.row {
   position: relative;
-}
+}/* ヘッダー相対位置（relative） */
 
 header.header div.header__bar.row h1.grid-6 {
-  font-size: 20px;
+  font-size: 30px;
   line-height: 41px;
   float: left;
-}
+}/* matsubokkuri名前に使用 */
 
 header.header div.header__bar.row h1.grid-6 a {
   display: block;
-}
+}/* トップページ最上部など色々に使用*/
 
 header.header div.header__bar.row div.grid-6 {
   float: right;
   text-align: right;
-}
+}/* トップページ最上部など色々に使用*/
+
 
 header.header div.header__bar.row div.grid-6 a.post {
   width: 120px;
   display: inline-left;
   margin-left: 10px;
-}
+}/* トップページ最上部など色々に使用*/
 
 header.header .user_nav {
   position: relative;
   height: 100px;
   right: 0;
-}
+}/* トップページ最上部など色々に使用特に変化なし*/
 
 header.header .user_nav span {
   top: 5px;
@@ -788,75 +434,54 @@ header.header .user_nav span {
   font-size: 1em;
   cursor: pointer;
   position: relative;
-}
+}/* トップページ最上部など色々に使用。特に変化なし*/
 
 header.header .user_nav span:after {
   content: '▼';
   font-size: .7em;
   margin-left: -4px;
-}
+}/*トップページユーザーネーム▼に使用*/
 
 header.header .user_nav span:hover ul {
   color: #57C3E9;
   display: block;
-}
+}/* トップページ最上部など色々に使用。特に変化なし*/
 
 header.header .user_nav ul {
   display: none;
   position: absolute;
   top: 46px;
   right: 0;
-  border-left: 1px solid #d8d8d8;
-  border-right: 1px solid #d8d8d8;
+  border-left: 1px solid #a0522d;
+  border-right: 1px solid #a0522d;
   box-shadow: 1px 2px 5px rgba(0, 0, 0, 0.1);
-}
+}/*トップページユーザーネーム使用消すと閉じなくなる*/
 
 header.header .user_nav ul li {
   background-color: #f0f0f0;
-}
+}/* トップページ最上部など色々に使用。特に変化なし*/
 
 header.header .user_nav ul li a {
   display: block;
   padding: 10px 20px;
   text-align: left;
   border-bottom: 1px solid #d8d8d8;
-}
+}/*トップページユーザーネーム使用。ログアウトなど乱れる*/
 
 .form {
   background: url(https://dl.dropboxusercontent.com/u/5840617/DeathtoStock_Wired3.jpg);
   background-size: cover;
-}
+}/*特に変化なし不要かも*/
 
-.form .contents {
-  position: absolute;
-  left: 0;
-  top: 30%;
-  bottom: 0;
-  right: 0;
-}
 
-.form footer {
-  position: absolute;
-  bottom: 10px;
-  left: 0;
-  right: 0;
-}
 
-div.contents.row h2 {
-  margin: 20px 0;
-  padding: 0;
-  font-weight: normal;
-}
 
-div.contents.row h2 strong {
-  font-weight: bold;
-  padding-right: 5px;
-  font-size: 1.2em;
-}
+
+
 
 div.contents.row .new_user {
   font-family: "游ゴシック", "YuGothic";
-}
+}/*特に変化なし不要かも*/
 
 div.contents.row div.content_post {
   margin: 20px 0;
@@ -868,7 +493,7 @@ div.contents.row div.content_post {
   background-position: center center;
   border-radius: 3px;
   box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
-}
+}/*特に変化なし不要かも*/
 
 div.contents.row div.content_post:after {
   content: '';
@@ -887,53 +512,26 @@ div.contents.row div.content_post:after {
   background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0) 62%, rgba(0, 0, 0, 0.85) 100%);
   z-index: 1;
   border-radius: 3px;
-}
+}/*特に変化あり画像がおかしくなる*/
 
-div.contents.row div.content_post .more {
-  position: absolute;
-  cursor: pointer;
-  top: 20px;
-  right: 30px;
-  z-index: 2;
-  height: 100px;
-  width: 80px;
-  text-align: right;
-}
 
-div.contents.row div.content_post .more:hover ul.more_list {
-  display: block;
-}
 
 div.contents.row div.content_post .more ul.more_list {
   position: absolute;
   text-align: left;
   width: 80px;
   right: 0;
-  font-size: 12px;
+  font-size: 20px;
   background-color: #fff;
   border: 1px solid #ddd;
   display: none;
   box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.2);
   border-radius: 3px;
-}
+}/*詳細ページの詳細などが出てくる*/
 
-div.contents.row div.content_post .more ul.more_list li {
-  border-bottom: 1px solid #ddd;
-}
 
-div.contents.row div.content_post .more ul.more_list li:last-child {
-  border-bottom: 0;
-}
 
-div.contents.row div.content_post .more ul.more_list li a {
-  display: block;
-  padding: 5px;
-}
 
-div.contents.row div.content_post .more ul.more_list li a:hover {
-  background-color: #57C3E9;
-  color: #fff;
-}
 
 div.contents.row div.content_post p {
   position: absolute;
@@ -945,43 +543,9 @@ div.contents.row div.content_post p {
   z-index: 2;
   font-weight: bold;
   text-shadow: 0 0 2px #000, 0 0 1px #000, 0 0 1px #000;
-}
+}/*特に変化なし不要かも*/
 
-div.contents.row div.content_post span.name {
-  position: absolute;
-  right: 30px;
-  bottom: 30px;
-  z-index: 2;
-  font-size: 13px;
-}
 
-div.contents.row div.content_post span.name a {
-  display: block;
-  color: #aaa;
-}
-
-div.contents.row div.content_post span.name a:hover {
-  text-decoration: underline;
-  color: #aaa;
-}
-
-div.contents.row div.content_post span.name span {
-  font-size: 9px;
-  display: block;
-}
-
-div.contents.row .success {
-  margin: 20px 0;
-  padding: 30px;
-  box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
-  background-color: white;
-  box-sizing: border-box;
-  text-align: center;
-}
-
-div.contents.row .success h3 {
-  margin: 10px auto;
-}
 
 form input,
 form textarea {
@@ -991,7 +555,7 @@ form textarea {
   border: 1px solid #D8D8D8;
   border-radius: 5px;
   font-family: "游ゴシック", "YuGothic";
-}
+}/*検索に使用細くなる*/
 
 form input[type="submit"] {
   background-color: #a0522d;
@@ -999,11 +563,11 @@ form input[type="submit"] {
   color: #fff;
   border: 0;
   font-size: 18px;
-}
+}/*検索の色がなくなる*/
 
 form input[type="submit"]:hover {
   background-color: #a0522d;
-}
+}/*検索に使用しているが特に変化なし*/
 
 .container {
   margin: 20px 0;
@@ -1011,7 +575,7 @@ form input[type="submit"]:hover {
   box-shadow: 0 0 10px rgba(41, 41, 41, 0.2);
   background-color: white;
   box-sizing: border-box;
-}
+}/*投稿フォームに使用色がなくなる*/
 
 .container h3 {
   margin: 0 0 20px;
@@ -1019,41 +583,30 @@ form input[type="submit"]:hover {
   font-weight: normal;
   font-size: 25px;
   color: #666;
-}
+}/*投稿フォームにキャンプ天候が小さくなる*/
 
-.comments {
-  padding: 5px;
-  margin-top: 15px;
-}
 
-.comments a {
-  color: #57C3E9;
-}
-
-.comments a:hover {
-  text-decoration: underline;
-}
 
 footer {
   margin: 30px auto;
   padding: 10px;
   color: #D8D8D8;
-}
+}/*footerに使用変化あり(matsubokkuri2021が白く無くなる)*/
 
 footer p {
   text-align: center;
-}
+}/*footerに使用変化あり(matsubokkuri2021)*/
 
 .search-form {
   text-align: center;
-  padding-top: 32px;
-}
+  padding-top: 100px;
+}/*検索に使用変化ありセンターじゃなくなる*/
 
 .search-form .search-input {
   width: 30%;
   margin-right: 10px;
-}
+}/*検索に使用変化あり*/
 
 .search-form .search-btn {
   width: 10%;
-}
+}/*検索に使用変化あり*/
