--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,11 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
+   
+   <link rel="stylesheet" type="text/css" href="slick/slick.css"/>
+    <link rel="stylesheet" type="text/css" href="slick/slick-theme.css"/>
+ 
+
   </head>
 
   <body>
@@ -31,13 +36,25 @@
             <%= link_to "新規登録", new_user_registration_path, class: "post" %>
           </div>
         <% end %>
+
+       </ul>
       </div>
     </header>
+       <section class="next slider">
+      <div><img src="img/sample1.png"></div>　
+      <div><img src="img/sample2.png"></div>　
+      <div><img src="img/sample3.png"></div>　
+      <div><img src="img/sample4.png"></div>　
+      <div><img src="img/sample5.png"></div>　
+      <div><img src="img/sample6.png"></div>　
+    </section>
     <%= yield %>
     <footer>
       <p>
         Copyright Matsubokkuri 2021.
       </p>
     </footer>
+    <script src="https : //code.jquery.com/jquery-2.2.0.min.js" type="text/javascript"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
   </body>
 </html>
